--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,28 @@
 {
-    "name": "leinonen/yii2-monolog",
+    "name": "exileed/yii2-monolog2",
     "type": "yii2-extension",
-    "description": "Monolog extension for Yii2",
+    "description": "Monolog2 extension for Yii2",
     "license": "MIT",
     "authors": [
         {
             "name": "Juuso Leinonen",
             "email": "leinonen.juuso@gmail.com"
+        },
+        {
+            "name": "Dmitriy Kuts (ExileeD)",
+            "email": "me@exileed.com"
         }
     ],
     "require": {
-        "monolog/monolog": "^1.22",
+        "php": "^7.4 || ^8.0",
+        "monolog/monolog": "^2.0",
         "yiisoft/yii2": "~2.0.11",
-        "php": "^7.0",
-        "tightenco/collect": "~5.4"
+        "tightenco/collect": "^5.8 || ^6.0 || ^7.0 ||^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "mockery/mockery": "^1.0"
+        "phpunit/phpunit": "^9.0",
+        "mockery/mockery": "^1.0",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
@@ -34,10 +39,5 @@
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ],
-    "scripts" : {
-        "post-install-cmd" : [
-            "cp -n phpunit.xml.dist phpunit.xml"
-        ]
-    }
+    ]
 }
